<resources>
    <string name="app_name" translatable="false">TruckApp</string>

    <string name="action_settings">Settings</string>
    <string name="player_count">%1$d / %2$d players</string>
    <string name="player_count_queue">%1$d waiting in queue</string>
    <string name="json_error">The received data could not be resolved. Please try again later.</string>
    <string name="download_error">The data could not be downloaded. Please try again later.</string>
    <string name="download_error_IOException">The data could not be downloaded. Please check your internet connection.</string>
    <string name="search_meetups_title">Search meetups</string>
    <string name="participant_count_singular">%1$s participant</string>
    <string name="participant_count_plural">%1$s participants</string>
    <string name="server_list_refreshed">The server list has been refreshed</string>
    <string name="meetup_list_refreshed">The meetup list has been refreshed</string>
    <string name="last_updated">Last updated %1$s</string>
    <string name="widget_title">TruckersMP Status</string>
    <string name="widget_server_name">%1$s (%2$s)</string>
    <string name="server_list_refreshed_widget">TruckersMP server list has been refreshed</string>
    <string name="as_of">As of %1$s</string>
    <string name="not_available_now">N/A right now</string>
    <string name="LastUpdatedTextView_LAST_UPDATED">Last updated %1$s</string>
    <string name="LastUpdatedTextView_AGO">%1$d %2$s ago</string>
    <string name="LastUpdatedTextView_DAY">day</string>
    <string name="LastUpdatedTextView_DAYS">days</string>
    <string name="LastUpdatedTextView_HOUR">hour</string>
    <string name="LastUpdatedTextView_HOURS">hours</string>
    <string name="LastUpdatedTextView_MINUTE">minute</string>
    <string name="LastUpdatedTextView_MINUTES">minutes</string>
    <string name="LastUpdatedTextView_JUST_NOW">just now</string>
    <string name="settings_title_theme_colour">Theme color</string>
    <string name="data_not_loaded">No data loaded.</string>
    <string name="settings_category_title_appearance">Appearance</string>
    <string name="settings_title_use_custom_theme">Use a custom theme</string>
    <string name="settings_category_title_widget">Widget</string>
    <string name="settings_title_widget_toast">Toast notifications</string>
    <string name="settings_summary_theme_colour">Choose the theme color</string>
    <string name="settings_summary_widget_toast">Display a toast notification when an action is completed (e.g., data is loaded)</string>
    <string name="widget_loading">Loading…</string>
    <string name="activity_meetup_detail">Meetup detail</string>
    <string name="show_meetup_detail">Show the meetup\'s detail</string>
    <string name="meetup_detail_webpage_error">The meetup\'s data could not be loaded.</string>
    <string name="meetup_detail_webpage_error_action">Try again</string>
    <string name="meetup_detail_webpage_notification">The meetup\'s data were successfully read in.</string>
    <string name="meetup_detail_webpage_notification_action">Create a reminder</string>
    <string name="meetup_create_reminder">Create a reminder for the meetup</string>
    <string name="meetup_detail_organiser">Organiser</string>
    <string name="meetup_detail_server">Server</string>
    <string name="meetup_detail_location">Location</string>
    <string name="meetup_detail_destination">Destination</string>
    <string name="meetup_detail_trailer_required">Is trailer required?</string>
    <string name="meetup_detail_meetup_date"><![CDATA[Date & time]]></string>
    <string name="meetup_detail_language">Language</string>
    <string name="meetup_detail_set_calendar_reminder">Add to calendar</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_category_title_meetup_reminders">Meetup reminders</string>
    <string name="settings_title_meetup_reminders_default">Calendar event title</string>
    <string name="title_meetup_reminders_default">TruckersMP Meetup</string>
    <string name="dialog_title_meetup_details">The meetup\'s details</string>
    <string name="settings_description_meetup_reminders_default">Calendar event description</string>
    <string name="description_meetup_reminders_default" formatted="false">Organiser: %organiser%\nServer: %server%\nLocation: %location%\nDestination: %destination%</string>
    <string name="default_value">Default</string>
    <string name="server_time">Game time: %1$s</string>
    <string name="settings_category_general">General</string>
    <string name="settings_title_display_server_time">Display game time</string>
    <string name="settings_summary_display_server_time">Enable a label displaying the server game time</string>
    <string name="action_truckersmp_home">TruckersMP Homepage</string>
    <string name="action_truckersmp_forum">TruckersMP Forum</string>
    <string name="action_truckersmp_convoys">TruckersMP Convoys</string>
    <string name="filter_meetups_server">Filter by server</string>
    <string name="filter_servers">Filter by server</string>
    <string name="filtering_status">Filtering active: %1$s servers</string>
    <string name="games_filtering_all">All games</string>
    <string name="games_filtering_entry">Only %1$s servers</string>
    <string name="filter_games">Filter by game</string>
    <string name="no_meetups_found">No meetups have been found.\n\nPlease try different filtering options.</string>
    <string name="settings_title_auto_refresh_lists">Auto list refresh</string>
    <string name="settings_summary_auto_refresh_lists">Refresh the server/meetup list automatically</string>
    <string name="settings_title_auto_refresh_interval">Refresh interval</string>
    <string name="settings_category_auto_refresh">Auto-refresh</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="settings_summary_auto_refresh_interval">%1$d hours, %2$d minutes</string>
    <string name="settings_summary_auto_refresh_interval_never">Never</string>
    <string name="persisted_data_retrieved">Restored data from cache</string>
    <string name="no_trips_yet">Looks like you\'ve not saved any trips yet.</string>
    <string name="tab_servers">SERVERS</string>
    <string name="tab_meetups">MEETUPS</string>
</resources>
