<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="preference_category_general"
        android:title="@string/settings_category_title_appearance">

        <CheckBoxPreference
            android:key="preference_custom_theme"
            android:title="@string/settings_title_use_custom_theme" />

        <cz.uruba.ets2mpcompanion.preferences.ColourChooserPreference
            android:key="preference_theme_colour"
            android:title="@string/settings_title_theme_colour"
            android:summary="@string/settings_summary_theme_colour"
            android:dependency="preference_custom_theme"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_general"
        android:title="@string/settings_category_title_meetup_reminders">

        <cz.uruba.ets2mpcompanion.views.NonEmptyEditTextPreference
            android:key="preference_meetup_reminders_default_title"
            android:title="@string/settings_title_meetup_reminders_default"
            android:defaultValue="@string/title_meetup_reminders_default"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_widget"
        android:title="@string/settings_category_title_widget">

        <CheckBoxPreference
            android:key="preference_widget_toast"
            android:title="@string/settings_title_widget_toast"
            android:summary="@string/settings_summary_widget_toast" />

    </PreferenceCategory>

</PreferenceScreen>